# webrtc-wasm

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  index.html  index.js
native-rust-peer/: Cargo.toml  offer.b64
native-rust-peer/src/: main.rs
src/: lib.rs
