[package]
name = "webrtc-wasm"
version = "0.1.0"
authors = ["freddyli"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.77", features = [
    "RtcPeerConnection",
    "RtcDataChannel",
    "RtcSessionDescription",
    "RtcIceCandidate",
    "RtcConfiguration",
    "RtcIceServer",
    "RtcSessionDescriptionInit",
    "RtcIceGatheringState",
    "RtcSdpType",
    "MessageEvent",
    "console",
    "ErrorEvent",
    "Event",
    "Window",
    "EventTarget"
] }
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.5"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
serde_json = "1.0.140"
base64 = "0.22.1"
wasm-bindgen-futures = "0.4.50"
futures = "0.3.31"
once_cell = "1.21.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
